# HUST-VendingMachine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test
docs/: Level0.md  Level1.md  Level2.md  summary.md
include/: AddItem.h  BuyItem.h  CheckIfEmpty.h  GlobalVariables.h  Pay.h  ShowItem.h  StateMachine.h
src/: AddItem.c  AddItem.h  BuyItem.c  CheckIfEmpty.c  GlobalVariables.c  ItemInfo.h  Pay.c  ShowItem.c  StateMachine.c  VendingMachine2-1.c  VendingMachineLevel1-1.c  VendingMachineLevel1-2.c  VendingMachineLevel1-2File.c  VendingMachineLevel1-3.c  VendingMachineLevel2-1.c  VendingMachineLevel2-2.c
